Fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,1 @@
-html, body, #root {
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-}
+
