--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,10 @@
+html, body, #root {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
 /* Common Variables */
 :root {
     --primary-color: #03fc98;
@@ -40,7 +47,7 @@
         "sidebar footer";
     height: 100vh;
     width: 100vw;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .sidebar {
@@ -67,7 +74,7 @@
     .main-grid {
         display: grid;
         grid-template-rows: 0.1fr auto auto;
-        grid-template-columns: 100vw;
+        grid-template-columns: 1fr;
         grid-template-areas: 
             "sidebar"
             "main"
@@ -172,7 +179,7 @@
 
 .flex-footer {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: space-between;
@@ -421,7 +428,7 @@
 }
 
 .project__info__text {
-    line-height: 1rem;
+    line-height: 1.2rem;
     letter-spacing: 0.1rem;
     font-size: 1rem;
 }
@@ -455,7 +462,6 @@
     width: 80%;
     margin: 1rem auto;
 }
-
 @media screen and (max-width:900px) {
 
     .project__desc, .project__info, .project__usage {
@@ -464,16 +470,13 @@
 }
 
 .contact {
-    width: 550px;
+    max-width: 550px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem;
+    text-align: center;
+    padding: 1rem
 }
 
-@media screen and (max-width:900px) {
-
+@media screen and (max-width: 800px) {
     .contact {
         width: 100%
     }
